[tool.poetry]
name = "scoring-system"
version = "0.1.0"
description = ""
authors = ["Charliemagne C. Malicay <charliemalicay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
